# SharedCore

./: PCT_TLX (1).py  README.md  docker-compose.yml  pyproject.toml  startup_gui.bat  startup_gui.command  startup_robot.bat
Arduino/VisFB_hund/: VisFB_hund.ino
Arduino/VisFB_stage/: VisFB_stage.ino
config/: core_activate.sh  core_activate.sh.env  core_activate_linux.sh  core_activate_linux.sh.env  core_activate_win.bat  core_activate_win.bat.env  core_client_services.json  core_server_services.json  core_server_services_camera.json  settings.json
docker/: Dockerfile  requirements.txt
test/: __init__.py  iter_test.py  pool.py  thread_test.py
wg_sharedavatar_cake_expt/: collaborative_app.py  robot_manager.py  visualize_app.py
wg_sharedavatar_cake_expt/.conan/: conanfile.txt  profile.linux  profile.mac  profile.win
wg_sharedavatar_cake_expt/MacCore/: conanbuildinfo.txt  conaninfo.txt  deploy_manifest.txt  graph_info.json
wg_sharedavatar_cake_expt/WinCore/: activate.bat
wg_sharedavatar_cake_expt/corepy/: CorePy.py  __init__.py
wg_sharedavatar_cake_expt/keyGUI/: __init__.py
wg_sharedavatar_cake_expt/loggle/: __init__.py
wg_sharedavatar_cake_expt/sharedavatar/: ButtonMotion.py  MotionControl.py  PointMotion.py  PositionMotion.py  RobotConfig.py  TableSender.py  __init__.py
wg_sharedavatar_cake_expt/sharedqt/: ButtonWidget.py  CrossButton.py  GripperButton.py  HeightButton.py  ImagePath.py  LabelButton.py  MainWindow.py  PartnerCursor.py  RotateButton.py  SetStyle.py  StatusButton.py  VideoWidget.py  __init__.py
(+322 files in other folders)
